only create group left

--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Tab Groups",
   "version": "1.0",
   "description": "Allows you to group tabs in the bar menu.",
-  "permissions": ["tabs", "tabHide", "storage", "menus"],
+  "permissions": ["tabs", "tabHide", "activeTab", "storage", "menus"],
   "action": {
     "default_title": "Whereami?",
     "default_popup": "hello.html"
