--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,12 @@
     "default_title": "Create Tab",
     "default_popup": "createTab.html"
   },
+  "browser_specific_settings": {
+    "gecko": {
+      "id": "UltraSimpleTabGroups@succiezi.ru",
+      "strict_min_version": "109.0"
+    }
+  },
   "background": {
     "scripts": ["background.js"]
   }
